--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,32 +22,25 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Read and extract versions from gradle.properties
-        id: extract-versions
-        run: |
-          VERSION=$(grep 'mod_version=' gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
-          MINECRAFT_VERSION=$(grep 'minecraft_version=' gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
-          echo "VERSION=${VERSION}" >> $GITHUB_ENV
-          echo "MINECRAFT_VERSION=${MINECRAFT_VERSION}" >> $GITHUB_ENV
+      - name: Read properties from gradle.properties
+        id: read_properties
+        uses: christian-draeger/read-properties@1.1.1
+        with:
+          path: gradle.properties
+          properties: minecraft_version mod_version
 
       - name: Build artifacts
         run: ./gradlew clean build
 
       - uses: Kir-Antipov/mc-publish@v3.3
         with:
-          modrinth-id: JGYH59f7
-          modrinth-token: ${{ secrets.TOKEN_MODRINTH }}
-
-          github-tag: mc${{ env.MINECRAFT_VERSION }}-${{ env.VERSION }}
-          github-prerelease: true
-          github-token: ${{ secrets.TOKEN_GITHUB }}
-
-          name: Redstonery Mod ${{ env.VERSION }} for Minecraft ${{ env.MINECRAFT_VERSION }}
-          version: mc${{ env.MINECRAFT_VERSION }}-${{ env.VERSION }}
+          name: Redstonery Mod ${{ steps.read_properties.outputs.mod_version }} for Minecraft ${{ steps.read_properties.outputs.minecraft_version }}
+          version: mc${{ steps.read_properties.outputs.minecraft_version }}-${{ steps.read_properties.outputs.mod_version }}
           version-type: alpha
           changelog-file: CHANGELOG_NEWEST.md
 
-          loaders: |
-            fabric
-          game-versions: |
-            ${{ env.MINECRAFT_VERSION }}
+          modrinth-id: JGYH59f7
+          modrinth-token: ${{ secrets.TOKEN_MODRINTH }}
+
+          github-token: ${{ secrets.TOKEN_GITHUB }}
+
